--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -23,7 +23,7 @@ email: chris.v.hua@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Software Developer based in the Seattle area
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://christopherhua.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: hua_chr
 github_username:  ChristopherHua
 
